--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -123,8 +123,7 @@ rule run_PLINK_scores:
 		plink = config["plink"]["plink_path"],
 		plink2 = config["plink"]["plink2_path"]
 	shell:
-		"TISSUE=`< {input.tissue}`; echo $TISSUE; touch {output.OK}"
-		#"TISSUE=`< {input.tissue}` | bash {input.script} {params.root_path} {params.results_path}/{wildcards.trait} {params.ancestry} {wildcards.trait} $TISSUE {params.plink} {params.plink2}"
+		"TISSUE=`< {input.tissue}`; bash {input.script} {params.root_path} {params.results_path}/{wildcards.trait} {params.ancestry} {wildcards.trait} $TISSUE {params.plink} {params.plink2}"
 
 
 
