--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -34,7 +34,11 @@ rule all:
 		expand(config["plink"]["results_path"] + "/{trait}/{trait}." + config["plink"]["ancestry"] + ".standard.500.1.sscore",trait=TRAITS),
 		expand(config["plink"]["results_path"] + "/{trait}/{trait}." + config["plink"]["ancestry"] + ".IMPACT.500.1.sscore",trait=TRAITS),
 		expand(config["plink"]["results_path"] + "/{trait}/{trait}." + config["plink"]["ancestry"] + ".SURF.500.1.sscore",trait=TRAITS),
-		expand(config["plink"]["results_path"] + "/{trait}/{trait}." + config["plink"]["ancestry"] + ".TURF.500.1.sscore",trait=TRAITS)
+		expand(config["plink"]["results_path"] + "/{trait}/{trait}." + config["plink"]["ancestry"] + ".TURF.500.1.sscore",trait=TRAITS),
+		expand(config["plink"]["results_path"] + "/{trait}/{trait}." + config["plink"]["ancestry"] + ".standard.bootstrap",trait=TRAITS),
+		expand(config["plink"]["results_path"] + "/{trait}/{trait}." + config["plink"]["ancestry"] + ".IMPACT.bootstrap",trait=TRAITS),
+		expand(config["plink"]["results_path"] + "/{trait}/{trait}." + config["plink"]["ancestry"] + ".SURF.bootstrap",trait=TRAITS),
+		expand(config["plink"]["results_path"] + "/{trait}/{trait}." + config["plink"]["ancestry"] + ".TURF.bootstrap",trait=TRAITS)
 
 rule calculate_LDscores:
 	conda: LDSC_CONDA
@@ -128,13 +132,19 @@ rule run_PLINK_scores:
 		plink2 = config["plink"]["plink2_path"]
 	shell:
 		"TISSUE=`< {input.tissue}`; bash {input.script} {params.root_path} {params.results_path}/{wildcards.trait} {params.ancestry} {wildcards.trait} $TISSUE {params.plink} {params.plink2}"
-'''
+
 rule bootstrap_PLINK_scores:
 	input: 
-
+		config["plink"]["results_path"] + "/{trait}/{trait}." + config["plink"]["ancestry"] + ".standard.500.1.sscore",
+		config["plink"]["results_path"] + "/{trait}/{trait}." + config["plink"]["ancestry"] + ".IMPACT.500.1.sscore",
+		config["plink"]["results_path"] + "/{trait}/{trait}." + config["plink"]["ancestry"] + ".SURF.500.1.sscore",
+		config["plink"]["results_path"] + "/{trait}/{trait}." + config["plink"]["ancestry"] + ".TURF.500.1.sscore",
 		script = REPO_PATH + "single-tissue-model/bootstrap_PLINK_scores.py"
 	output:
-
+		config["plink"]["results_path"] + "/{trait}/{trait}." + config["plink"]["ancestry"] + ".standard.bootstrap",
+		config["plink"]["results_path"] + "/{trait}/{trait}." + config["plink"]["ancestry"] + ".IMPACT.bootstrap",
+		config["plink"]["results_path"] + "/{trait}/{trait}." + config["plink"]["ancestry"] + ".SURF.bootstrap",
+		config["plink"]["results_path"] + "/{trait}/{trait}." + config["plink"]["ancestry"] + ".TURF.bootstrap"
 	params:
 		ancestry = config["bootstrap"]["ancestry"],
 		isquant = config["bootstrap"]["isQuant"]
@@ -144,7 +154,5 @@ rule bootstrap_PLINK_scores:
 		" --trait {wildcards.trait}"
 		" --isQuant {params.isquant}"
 		" --root {params.root_path}"
-'''
 
-
-
+\
