--- a/snakemake/workflow/config.yaml
+++ b/snakemake/workflow/config.yaml
@@ -3,12 +3,14 @@ ldsc:
   conda: "/nfs/turbo/boylelab/crone/tools/ldsc/environment.yml"
   python: "/home/crone/.conda/envs/ldsc/bin/python"
   1KG: "/nfs/turbo/boylelab/crone/data/1KG/1000G_EUR_Phase3_plink/"
-  baselineLD: "/nfs/turbo/boylelab/crone/data/1KG/TLand_custom_baselineLD_v1.2/serial/"
+  baselineLD_TF: "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baselineLD_v1.2/serial/"
+  baselineLD_TL: "/nfs/turbo/boylelab/crone/data/1KG/TLand_custom_baselineLD_v1.2/serial/"
   HM3: "/nfs/turbo/boylelab/crone/data/1KG/hapmap3_snps/"
   GWAS: "/nfs/turbo/boylelab/crone/data/GWAS/"
   weights: "/nfs/turbo/boylelab/crone/data/1KG/1000G_Phase3_weights_hm3_no_MHC/weights.hm3_noMHC."
   freq: "/nfs/turbo/boylelab/crone/data/1KG/1000G_Phase3_frq/1000G.EUR.QC."
-  ldscore_path: "/nfs/turbo/boylelab/crone/data/1KG/TLand_custom_baselineLD_v1.2/serial/"
+  ldscore_path_TF: "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baselineLD_v1.2/serial/"
+  ldscore_path_TL: "/nfs/turbo/boylelab/crone/data/1KG/TLand_custom_baselineLD_v1.2/serial/"
   h2_path: "/nfs/turbo/boylelab/crone/results/h2"
 repo:
   path: "/nfs/turbo/boylelab/crone/repo/TITR/"
